--- a/templates/test.html
+++ b/templates/test.html
@@ -18,5 +18,12 @@
 
 <h2>Elevator Speech</h2>
 iStreet is a way for students to see the buzz on the street in one tap. Gone are those ruined nights when one just wandered aimlessly from club to club, hoping to run into a friend, a good DJ, or just some decent beer. Through a combination of gathering crowd-sourced ratings, identifying friend networks, and integrating a live chat system, iStreet provides an updated, real-time stream of the "hottest" clubs on the street on any given night.
+
+<br><br>
+{% if not netid %}
+<p><i>Not signed in</i></p>
+<a href="/login">Sign in </a>
+{% endif %}
+{% if netid %}<p><i>Signed in as {{netid}}</i></p>{% endif %}
 </body>
 </html>
