--- a/istreetserver/templates/index.html
+++ b/istreetserver/templates/index.html
@@ -4,9 +4,15 @@
 </head>
 <body>
 
-Try some of these URLs! You may want to log out of CAS first to make this more interesting.
-/eventslist - this will give you JSON for all the events, but you have to be logged in first! If you aren't, it will redirect you to CAS.
-/getUsers - no matter what, you won't get this to work! (well, unless you look at our code and find our challenge-response authentication key, but don't do that...)
+Try these URLs! You may want to log out of CAS first to make this more interesting.<br><br>
+
+/eventslist - this will give you JSON for all the events, but you have to be logged in first! If you aren't, it will redirect you to CAS.<br>
+
+/getUsers - no matter what, you won't get this to work! (well, unless you look at our code and find our challenge-response authentication key, but don't do that...)<br>
+
+/login<br>
+
+/logout<br>
 
 
 <br><br>
